Too large z-indexing fixed

--- a/src/app/pages/month/month.component.scss
+++ b/src/app/pages/month/month.component.scss
@@ -56,7 +56,7 @@
 .month-calendar-header-row {
   position: sticky;
   top: 50px;
-  z-index: 8000;
+  z-index: 800;
   display: flex;
   height: 2em;
   max-height: 2em;
