--- a/src/app/pages/pages.component.scss
+++ b/src/app/pages/pages.component.scss
@@ -37,7 +37,7 @@
 
 .pages-header {
   position: fixed;
-  z-index: 9001;
+  z-index: 901;
   top: 0;
   left: 0;
   right: 0;
@@ -100,7 +100,7 @@
 
 .pages-sidebar {
   position: absolute;
-  z-index: 9000;
+  z-index: 900;
   top: 50px;
   bottom: 0;
   left: 0;
